--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Pixelwave Beats • Lofi Video Game Music</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -84,6 +84,7 @@
             src="https://www.youtube.com/embed/WZbDSjIQszw?si=7-WXKCPw2capIt0y"
             title="YouTube video player"
             frameborder="0"
+            autoplay="true"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin"
             allowfullscreen
@@ -94,7 +95,7 @@
             class="mt-3"
             width="100%"
             height="500"
-            src="https://www.youtube.com/live_chat?v=yourvideoid&amp;embed_domain=yourdomainnamegoeshere.com"
+            src="https://www.youtube.com/live_chat?v=WZbDSjIQszw&amp;embed_domain=pixelwavebeats.github.io"
           ></iframe>
         </div>
       </div>
