--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             class="mt-3"
             width="100%"
             height="500"
-            src="https://www.twitch.tv/popout/pixelwavebeats/chat?popout="
+            src="https://www.twitch.tv/popout/pixelwavebeats/chat?popout=;embed_domain=pixelwavebeats.github.io"
           ></iframe>
         </div>
       </div>
