--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
         </div>
         <div class="p-1 w-35">
           <iframe
-            class="mt-3"
-            width="100%"
+            id="twitch-chat-embed"
+            src="https://www.twitch.tv/embed/pixelwavebeats/chat?parent=pixelwavebeats.github.io"
             height="500"
-            src="https://www.twitch.tv/popout/pixelwavebeats/chat?popout=;embed_domain=pixelwavebeats.github.io"
-          ></iframe>
+            width="100%"
+          >
+          </iframe>
         </div>
       </div>
     </section>
