--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
         </div>
         <div class="p-1 w-35">
           <iframe
-            id="twitch-chat-embed"
-            src="https://www.twitch.tv/pixelwavebeats/chat?darkpopout&parent=pixelwavebeats.github.io"
+            src="https://www.twitch.tv/pixelwavebeats/chat?darkpopout"
             allow="allow-storage-access-by-user-activation;allow-scripts;allow-same-origin;allow-popups;allow-popups-to-escape-sandbox;allow-modals"
             height="500"
             width="100%"
