--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             class="mt-3"
             width="100%"
             height="500"
-            src="https://www.youtube.com/embed/WZbDSjIQszw?si=7-WXKCPw2capIt0y"
+            src="https://www.youtube.com/embed/WZbDSjIQszw?si=7-WXKCPw2capIt0y&autoplay=1"
             title="YouTube video player"
             frameborder="0"
             autoplay="true"
