--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
         </div>
         <div class="p-1 w-35">
           <iframe
-            src="https://www.twitch.tv/pixelwavebeats/chat?darkpopout"
+            id="twitch-chat-embed"
+            src="https://www.twitch.tv/embed/pixelwavebeats/chat?parent=pixelwavebeats.github.io&darkpopout"
             allow="allow-storage-access-by-user-activation;allow-scripts;allow-same-origin;allow-popups;allow-popups-to-escape-sandbox;allow-modals"
             height="500"
             width="100%"
