--- a/index.html
+++ b/index.html
@@ -59,9 +59,6 @@
         Livestreams on <span class="text-light-pink">YouTUBE</span> &
         <span class="text-light-purple">Twitch</span> Everyday • 6am - 6pm PST
         <br />
-        Livestream VODs on <span class="text-light-pink">YouTUBE</span> Everyday
-        • 6pm PST
-        <br />
         Lofi music published on
         <span class="text-light-pink">YouTUBE</span> often!
       </p>
@@ -107,6 +104,7 @@
         </div>
         <div class="p-1 w-35">
           <iframe
+            class="mt-3"
             id="twitch-chat-embed"
             src="https://www.twitch.tv/embed/pixelwavebeats/chat?parent=pixelwavebeats.github.io&darkpopout"
             allow="allow-storage-access-by-user-activation; allow-scripts; allow-same-origin; allow-popups; allow-popups-to-escape-sandbox; allow-modals"
