--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             class="mt-3"
             width="100%"
             height="500"
-            src="https://www.youtube.com/embed/WZbDSjIQszw?si=7-WXKCPw2capIt0y&autoplay=1"
+            src="https://www.youtube.com/embed/WZbDSjIQszw?si=7-WXKCPw2capIt0y&amp;autoplay=1"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -105,7 +105,7 @@
           <iframe
             class="mt-3"
             id="twitch-chat-embed"
-            src="https://www.twitch.tv/embed/pixelwavebeats/chat?parent=pixelwavebeats.github.io&darkpopout"
+            src="https://www.twitch.tv/embed/pixelwavebeats/chat?parent=pixelwavebeats.github.io&amp;darkpopout"
             allow="allow-storage-access-by-user-activation; allow-scripts; allow-same-origin; allow-popups; allow-popups-to-escape-sandbox; allow-modals"
             height="500"
             width="100%"
