--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         Pixelwave Beats Livestreams on
         <span class="text-light-pink">YouTUBE</span>
       </h2>
-      <div class="d-flex">
+      <div class="d-inline-flex">
         <div class="p-1 w-65">
           <iframe
             class="mt-3"
@@ -97,7 +97,7 @@
         Pixelwave Beats Livestreams on
         <span class="text-light-purple">Twitch</span>
       </h2>
-      <div class="d-flex">
+      <div class="d-inline-flex">
         <div class="p-1 w-65">
           <div id="twitch-player" class="mt-3"></div>
         </div>
