--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         />
       </a>
     </section>
+
     <section class="container">
       <h1 class="text-center mt-1">Pixelwave Beats</h1>
       <p class="text-center mt-3">
@@ -51,16 +52,6 @@
         <span class="text-light-purple">Twitch</span> channel that transforms
         nostalgic video game music, like Pokémon Red, Blue, and Yellow, into
         relaxing lofi beats.
-      </p>
-      <h3 class="text-center mt-3">
-        Pixelwave Beats Streaming & Videos Schedule
-      </h3>
-      <p class="text-center mt-3">
-        Livestreams on <span class="text-light-pink">YouTUBE</span> &
-        <span class="text-light-purple">Twitch</span> Everyday • 6am - 6pm PST
-        <br />
-        Lofi music published on
-        <span class="text-light-pink">YouTUBE</span> often!
       </p>
     </section>
     <section class="container">
@@ -92,6 +83,7 @@
         </div>
       </div>
     </section>
+
     <section class="container">
       <h2 class="text-center mt-3">
         Pixelwave Beats Livestreams on
@@ -114,6 +106,20 @@
         </div>
       </div>
     </section>
+
+    <section class="container">
+      <h3 class="text-center mt-3">
+        Pixelwave Beats Streaming & Videos Schedule
+      </h3>
+      <p class="text-center mt-3">
+        Livestreams on <span class="text-light-pink">YouTUBE</span> &
+        <span class="text-light-purple">Twitch</span> Everyday • 6am - 6pm PST
+        <br />
+        Lofi music published on
+        <span class="text-light-pink">YouTUBE</span> often!
+      </p>
+    </section>
+
     <section class="container text-center mt-3">
       <p class="text-center mt-3">
         All of our lofi music videos are published on YouTUBE under the Creative
