--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         relaxing lofi beats.
       </p>
     </section>
+
     <section class="container">
       <h2 class="text-center mt-3">
         Pixelwave Beats Livestreams on
@@ -115,9 +116,27 @@
         Livestreams on <span class="text-light-pink">YouTUBE</span> &
         <span class="text-light-purple">Twitch</span> Everyday • 6am - 6pm PST
         <br />
+        Livestream VODs on <span class="text-light-pink">YouTUBE</span> • 6pm
+        PST
+        <br />
         Lofi music published on
-        <span class="text-light-pink">YouTUBE</span> often!
+        <span class="text-light-pink">YouTUBE</span> randomly however, often!
       </p>
+    </section>
+
+    <section class="container">
+      <h2 class="text-center mt-3">Pokémon RBY but its Lofi Playlist</h2>
+      <iframe
+        class="mt-3"
+        width="100%"
+        height="500"
+        src="https://www.youtube.com/watch?v=tlpSC9YH2Ns&list=PLGwSa-hPjHeDo7-WzKqMHpDwB7Qd4fdJx&amp;index=1&amp;t=0s&amp;autoplay=0"
+        title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen
+      ></iframe>
     </section>
 
     <section class="container text-center mt-3">
