--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         class="mt-3"
         width="100%"
         height="500"
-        src="https://www.youtube.com/watch?v=tlpSC9YH2Ns&list=PLGwSa-hPjHeDo7-WzKqMHpDwB7Qd4fdJx&amp;index=1&amp;t=0s&amp;autoplay=0"
+        src="https://www.youtube.com/watch?v=tlpSC9YH2Ns&list=PLGwSa-hPjHeDo7-WzKqMHpDwB7Qd4fdJx&amp;index=1&amp;t=0s&amp;autoplay=0&amp;embed_domain=pixelwavebeats.github.io"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
