--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         class="mt-3"
         width="100%"
         height="500"
-        src="https://www.youtube.com/embed/?listType=playlist&list=PLGwSa-hPjHeDo7-WzKqMHpDwB7Qd4fdJx"
+        src="https://www.youtube.com/embed/?listType=playlist&amp;list=PLGwSa-hPjHeDo7-WzKqMHpDwB7Qd4fdJx"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
