--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             width="100%"
             height="500"
             src="https://www.youtube.com/live_chat?v=WZbDSjIQszw&amp;embed_domain=pixelwavebeats.github.io"
+            frameborder="0"
           ></iframe>
         </div>
       </div>
@@ -102,6 +103,7 @@
             allow="allow-storage-access-by-user-activation; allow-scripts; allow-same-origin; allow-popups; allow-popups-to-escape-sandbox; allow-modals"
             height="500"
             width="100%"
+            frameborder="0"
           >
           </iframe>
         </div>
