--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         Livestreams on <span class="text-light-pink">YouTUBE</span> &
         <span class="text-light-purple">Twitch</span> Everyday • 6am - 6pm PST
         <br />
-        Livestream VODs on <span class="text-light-pink">YouTUBE</span> • 6pm
-        PST
+        Livestream VODs on <span class="text-light-pink">YouTUBE</span> Everyday
+        • 6pm PST
         <br />
         Lofi music published on
         <span class="text-light-pink">YouTUBE</span> randomly however, often!
