--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             class="mt-3"
             width="100%"
             height="500"
-            src="https://www.youtube.com/embed/WZbDSjIQszw?si=7-WXKCPw2capIt0y&amp;autoplay=1"
+            src="https://www.youtube.com/embed/yiezWJ70s7U?si=Z6bgNNuqk4fTd0jx&amp;autoplay=1"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -79,8 +79,7 @@
             class="mt-3"
             width="100%"
             height="500"
-            src="https://www.youtube.com/live_chat?v=WZbDSjIQszw&amp;embed_domain=pixelwavebeats.github.io"
-            frameborder="0"
+            src="https://www.youtube.com/live_chat?v=yiezWJ70s7U&amp;embed_domain=pixelwavebeats.github.io"
           ></iframe>
         </div>
       </div>
@@ -103,7 +102,6 @@
             allow="allow-storage-access-by-user-activation; allow-scripts; allow-same-origin; allow-popups; allow-popups-to-escape-sandbox; allow-modals"
             height="500"
             width="100%"
-            frameborder="0"
           >
           </iframe>
         </div>
