--- a/index.html
+++ b/index.html
@@ -140,10 +140,11 @@
     </section>
 
     <section class="container text-center mt-3">
+      <h4 class="text-center mt-3">Licenses & Usage</h4>
       <p class="text-center mt-3">
         All of our lofi music videos are published on YouTUBE under the Creative
         Commons - Attribution license. The only requirement is that you leave
-        attribution to our video for use!
+        attribution to our video for use on YouTUBE!
       </p>
 
       <a href="https://pixelwavebeats.github.io" title="Pixelwave Beats Website"
