--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
       </h3>
       <p class="text-center mt-3">
         Livestreams on <span class="text-light-pink">YouTUBE</span> &
-        <span class="text-light-purple">Twitch</span> Everyday • 6am - 6pm PST
+        <span class="text-light-purple">Twitch</span> everyday • 6am - 6pm PST
         <br />
-        Livestream VODs on <span class="text-light-pink">YouTUBE</span> Everyday
+        Livestream VODs on <span class="text-light-pink">YouTUBE</span> everyday
         • 6pm PST
         <br />
         Lofi music published on
