--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
       <h4 class="text-center mt-3">Licenses & Usage</h4>
       <p class="text-center mt-3">
         All of our lofi music videos are published on YouTUBE under the Creative
-        Commons - Attribution license. The only requirement is that you leave
-        attribution to our video for use on YouTUBE!
+        Commons - Attribution license. The only requirement is that you leave a
+        link attributing to our video for use on YouTUBE!
       </p>
 
       <a href="https://pixelwavebeats.github.io" title="Pixelwave Beats Website"
