--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         &
         <span class="text-light-purple">Twitch</span>
       </h2>
-      <div class="d-flex">
-        <div class="p-1 w-65">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-xs-12">
           <iframe
             class="mt-3"
             width="100%"
@@ -91,7 +91,7 @@
             allowfullscreen
           ></iframe>
         </div>
-        <div class="p-1 w-35">
+        <div class="col-md-4 col-xs-12">
           <iframe
             class="mt-3"
             width="100%"
@@ -100,11 +100,11 @@
           ></iframe>
         </div>
       </div>
-      <div class="d-flex">
-        <div class="p-1 w-65">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-xs-12">
           <div id="twitch-player" class="mt-3"></div>
         </div>
-        <div class="p-1 w-35">
+        <div class="col-md-4 col-xs-12">
           <iframe
             class="mt-3"
             id="twitch-chat-embed"
