Mobile CSS Optimizations

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <span class="text-light-purple">Twitch</span>
       </h2>
       <div class="row justify-content-center">
-        <div class="col-md-8 col-xs-12">
+        <div class="col-lg-8 col-md-12">
           <iframe
             class="mt-3"
             width="100%"
@@ -91,7 +91,7 @@
             allowfullscreen
           ></iframe>
         </div>
-        <div class="col-md-4 col-xs-12">
+        <div class="col-lg-4 col-md-12">
           <iframe
             class="mt-3"
             width="100%"
@@ -101,10 +101,10 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <div class="col-md-8 col-xs-12">
+        <div class="col-lg-8 col-md-12">
           <div id="twitch-player" class="mt-3"></div>
         </div>
-        <div class="col-md-4 col-xs-12">
+        <div class="col-lg-4 col-md-12">
           <iframe
             class="mt-3"
             id="twitch-chat-embed"
