--- a/index.html
+++ b/index.html
@@ -119,6 +119,39 @@
     </section>
 
     <section class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-6 cold-md-12">
+          <h2 class="text-center mt-3">Trainer Battle Victory but its Lofi</h2>
+          <iframe
+            class="mt-3"
+            width="100%"
+            height="540"
+            src="https://www.youtube.com/embed/FQJtsExJ7bE?si=MmlbwGenoiOh_gLe"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <div class="col-lg-6 cold-md-12">
+          <h2 class="text-center mt-3">Pokémon RBY but its Lofi Playlist</h2>
+          <iframe
+            class="mt-3"
+            width="100%"
+            height="540"
+            src="https://www.youtube.com/embed/?listType=playlist&amp;list=PLGwSa-hPjHeDo7-WzKqMHpDwB7Qd4fdJx"
+            title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin"
+            allowfullscreen
+          ></iframe>
+        </div>
+      </div>
+    </section>
+
+    <section class="container">
       <h3 class="text-center mt-3">
         Pixelwave Beats Streaming & Videos Schedule
       </h3>
@@ -132,21 +165,6 @@
         Lofi music published on
         <span class="text-light-pink">YouTUBE</span> randomly however, often!
       </p>
-    </section>
-
-    <section class="container">
-      <h2 class="text-center mt-3">Pokémon RBY but its Lofi Playlist</h2>
-      <iframe
-        class="mt-3"
-        width="100%"
-        height="540"
-        src="https://www.youtube.com/embed/?listType=playlist&amp;list=PLGwSa-hPjHeDo7-WzKqMHpDwB7Qd4fdJx"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin"
-        allowfullscreen
-      ></iframe>
     </section>
 
     <section class="container text-center mt-3">
