--- a/index.html
+++ b/index.html
@@ -121,12 +121,18 @@
     <section class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 cold-md-12">
-          <h2 class="text-center mt-3">Trainer Battle Victory but its Lofi</h2>
+          <h2 id="videoTitle" class="text-center mt-3">Loading...</h2>
+          <p id="reloadButton" class="text-center">
+            <i class="bi bi-arrow-clockwise"></i>
+            Load a Different Lofi Video
+          </p>
           <iframe
+            id="video"
+            data=""
             class="mt-3"
             width="100%"
             height="540"
-            src="https://www.youtube.com/embed/FQJtsExJ7bE?si=MmlbwGenoiOh_gLe"
+            src=""
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -135,12 +141,15 @@
           ></iframe>
         </div>
         <div class="col-lg-6 cold-md-12">
-          <h2 class="text-center mt-3">Pokémon RBY but its Lofi Playlist</h2>
+          <h2 id="playlistTitle" class="text-center mt-3">Loading...</h2>
+          <p class="text-center">More playlists in the future!</p>
           <iframe
+            id="playlist"
+            data=""
             class="mt-3"
             width="100%"
             height="540"
-            src="https://www.youtube.com/embed/?listType=playlist&amp;list=PLGwSa-hPjHeDo7-WzKqMHpDwB7Qd4fdJx"
+            src=""
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
