--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="col-lg-6 cold-md-12">
           <h2 id="videoTitle" class="text-center mt-3">Loading...</h2>
           <p id="reloadButton" class="text-center">
-            <i class="bi bi-arrow-clockwise"></i>
+            <i class="bi bi-arrow-clockwise text-light-pink"></i>
             Load a Different Lofi Video
           </p>
           <iframe
