--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       >
         <img
           src="./assets/img/youtube.png"
-          alt="Pixelwave Beats
+          alt="Pixelwave Beats on
 						YouTube"
         />
       </a>
@@ -55,7 +55,18 @@
         <img
           class=""
           src="./assets/img/twitch.png"
-          alt="Pixelwave Beats Twitch"
+          alt="Pixelwave Beats on Twitch"
+        />
+      </a>
+      <a
+        class="icon"
+        href="https://www.youtube.com/@PixelwaveBeats/streams"
+        target="_blank"
+      >
+        <img
+          class=""
+          src="./assets/img/vods.png"
+          alt="Pixelwave Beats Livestream VODs"
         />
       </a>
     </section>
