Icon Link/Alt Corrections

--- a/index.html
+++ b/index.html
@@ -40,17 +40,15 @@
         class="icon"
         href="https://www.youtube.com/@pixelwavebeats"
         target="_blank"
+        title="Pixelwave Beats on YouTube"
       >
-        <img
-          src="./assets/img/youtube.png"
-          alt="Pixelwave Beats on
-						YouTube"
-        />
+        <img src="./assets/img/youtube.png" alt="Pixelwave Beats on YouTube" />
       </a>
       <a
         class="icon"
         href="https://www.twitch.tv/pixelwavebeats"
         target="_blank"
+        title="Pixelwave Beats on Twitch"
       >
         <img
           class=""
@@ -62,11 +60,12 @@
         class="icon"
         href="https://www.youtube.com/@PixelwaveBeats/streams"
         target="_blank"
+        title="Pixelwave Beats Livestream VODs on YouTUBE"
       >
         <img
           class=""
           src="./assets/img/vods.png"
-          alt="Pixelwave Beats Livestream VODs"
+          alt="Pixelwave Beats Livestream VODs on YouTUBE"
         />
       </a>
     </section>
