--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </p>
     </section>
 
-    <section id="youtubeLive" class="container">
+    <section class="container">
       <h2 class="text-center mt-3">
         Livestreams on
         <span class="text-light-pink">YouTUBE</span>
@@ -88,7 +88,7 @@
         <span class="text-light-purple">Twitch</span>
       </h2>
 
-      <div class="row justify-content-center">
+      <div id="youtubeLive" class="row justify-content-center">
         <div class="col-lg-8 col-md-12">
           <iframe
             id="youtubeLiveEmbed"
@@ -111,7 +111,7 @@
         </div>
       </div>
 
-      <div class="row justify-content-center mt-3">
+      <div id="twitchLive" class="row justify-content-center mt-3">
         <div class="col-lg-8 col-md-12">
           <div id="twitch-player"></div>
         </div>
@@ -128,7 +128,7 @@
       </div>
     </section>
 
-    <section id="twitchLive" class="container">
+    <section class="container">
       <div class="row justify-content-center">
         <div class="col-lg-6 cold-md-12">
           <h2 id="videoTitle" class="text-center mt-3">Loading...</h2>
@@ -175,11 +175,11 @@
         Pixelwave Beats Streaming & Videos Schedule
       </h3>
       <p class="text-center mt-3">
-        Livestreams on <span class="text-light-pink">YouTUBE</span> &
-        <span class="text-light-purple">Twitch</span> everyday • 6am - 6pm PST
+        Livestreams on <span class="text-light-pink">YouTUBE</span> everyday •
+        6am - 6pm PST
         <br />
-        Livestream VODs on <span class="text-light-pink">YouTUBE</span> everyday
-        • 6pm PST
+        Livestreams on <span class="text-light-purple">Twitch</span> everyday •
+        6pm - 6am PST
         <br />
         Lofi music published on
         <span class="text-light-pink">YouTUBE</span> randomly however, often!
@@ -193,6 +193,7 @@
         Commons - Attribution license. The only requirement is that you leave a
         link attributing to our video for use on YouTUBE!
       </p>
+      <p class="text-center mt-3">Commercial use currently unavailable.</p>
 
       <a href="https://pixelwavebeats.github.io" title="Pixelwave Beats Website"
         >Pixelwave Beats</a
