--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         Livestreams on <span class="text-light-purple">Twitch</span> everyday •
         6pm - 6am PST
         <br />
-        Lofi music published on
+        Lofi videos & VODs published on
         <span class="text-light-pink">YouTUBE</span> randomly however, often!
       </p>
     </section>
