--- a/index.html
+++ b/index.html
@@ -210,6 +210,14 @@
         title="Pixelwave Beats Twitch"
         >Twitch</a
       >
+      •
+      <a
+        class="icon"
+        href="https://www.youtube.com/@PixelwaveBeats/streams"
+        target="_blank"
+        title="Pixelwave Beats Livestream VODs on YouTUBE"
+        >Stream VODs</a
+      >
     </section>
 
     <script
