--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
       </h3>
       <p class="text-center mt-3">
         Livestreams on <span class="text-light-pink">YouTUBE</span> everyday •
-        6am - 6pm PST
+        6am to 6pm PST
         <br />
         Livestreams on <span class="text-light-purple">Twitch</span> everyday •
-        6pm - 6am PST
+        6pm to 6am PST
         <br />
         Lofi videos & VODs published on
         <span class="text-light-pink">YouTUBE</span> randomly however, often!
