--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         href="https://www.youtube.com/@PixelwaveBeats/streams"
         target="_blank"
         title="Pixelwave Beats Livestream VODs on YouTUBE"
-        >Stream VODs</a
+        >VODs</a
       >
     </section>
 
