--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             id="youtubeLiveEmbed"
             width="100%"
             height="540"
-            src="https://www.youtube.com/embed/yiezWJ70s7U?si=Z6bgNNuqk4fTd0jx&amp;autoplay=1&amp;enablejsapi=1"
+            src="https://www.youtube.com/embed/yiezWJ70s7U?si=Z6bgNNuqk4fTd0jx&amp;autoplay=0"
             title="YouTube video player"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
