--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             id="youtubeLiveEmbed"
             width="100%"
             height="540"
-            src="https://www.youtube.com/embed/yiezWJ70s7U?si=Z6bgNNuqk4fTd0jx&amp;autoplay=0"
-            title="YouTube video player"
+            src="https://www.youtube.com/embed/6snErNEdSbY?si=6paRgTeIflVy1nCV&amp;autoplay=1"
+            title="Pixelwave Beats Livestream on YouTUBE"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin"
@@ -106,7 +106,7 @@
           <iframe
             width="100%"
             height="540"
-            src="https://www.youtube.com/live_chat?v=yiezWJ70s7U&amp;embed_domain=pixelwavebeats.github.io"
+            src="https://www.youtube.com/live_chat?v=6snErNEdSbY&amp;embed_domain=pixelwavebeats.github.io"
           ></iframe>
         </div>
       </div>
