--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </a>
       <a
         class="icon"
-        href="https://www.youtube.com/@PixelwaveBeats/streams"
+        href="https://www.youtube.com/@PixelwaveBeatsVOD"
         target="_blank"
         title="Pixelwave Beats Livestream VODs on YouTUBE"
       >
@@ -212,7 +212,7 @@
       >
       •
       <a
-        href="https://www.youtube.com/@PixelwaveBeats/streams"
+        href="https://www.youtube.com/@PixelwaveBeatsVOD"
         target="_blank"
         title="Pixelwave Beats Livestream VODs on YouTUBE"
         >VODs</a
