Logo Border Change

--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 
   <body>
     <section class="container text-center">
-      <img
-        src="./assets/img/logo.png"
-        class="logo mt-3"
-        alt="Pixelwave Beats"
-      />
+      <div class="logo-border mt-3">
+        <img src="./assets/img/logo.png" class="logo" alt="Pixelwave Beats" />
+      </div>
+
       <section class="container mt-3"></section>
       <a
         class="icon"
