--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             id="youtubeLiveEmbed"
             width="100%"
             height="540"
-            src="https://www.youtube.com/embed/6snErNEdSbY?si=6paRgTeIflVy1nCV&amp;autoplay=1"
+            src="https://www.youtube.com/embed/dYRU0Mkzlgw?si=d8TMYYIEIfPkZZtU&amp;autoplay=1"
             title="Pixelwave Beats Livestream on YouTUBE"
             frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -105,7 +105,7 @@
           <iframe
             width="100%"
             height="540"
-            src="https://www.youtube.com/live_chat?v=6snErNEdSbY&amp;embed_domain=pixelwavebeats.github.io"
+            src="https://www.youtube.com/live_chat?v=dYRU0Mkzlgw&amp;embed_domain=pixelwavebeats.github.io"
           ></iframe>
         </div>
       </div>
