--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
           alt="Pixelwave Beats on Twitch"
         />
       </a>
+      <a
+        class="icon"
+        href="https://www.x.com/@pixelwavebeats"
+        target="_blank"
+        title="Pixelwave Beats on Twitch"
+      >
+        <img
+          class=""
+          src="./assets/img/X.png"
+          alt="Pixelwave Beats on Twitch"
+        />
+      </a>
     </section>
 
     <section class="container">
@@ -180,6 +192,10 @@
         href="https://www.twitch.tv/pixelwavebeats"
         title="Pixelwave Beats Twitch"
         >Twitch</a
+      >
+      •
+      <a href="https://www.x.com/@pixelwavebeats" title="Pixelwave Beats X"
+        >X</a
       >
     </section>
 
